--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "reactstrap": "^9.2.3",
+    "remixicon": "^4.5.0",
     "slick-carousel": "^1.8.1",
+    "video-react": "^0.16.0",
     "yup": "^1.4.0"
   }
 }
